# FlowReconstructionFromExperiment

./: .gitattributes  .gitignore  README.md  config.py  config_wandb.py  denoise.ipynb  pyproject.toml  run_repeats.py  select_sensor_qrpivot.py  sweep_process_config.py  test.ipynb  train.py  train_feedforward.py  train_ffcnn.py  train_options.py  train_restart_from_checkpoint.py  try2d.ipynb  try3d.ipynb  try3dkol.ipynb  uncertainty.ipynb
admin/: conda_environment.yml  requirement.txt
figures_for_paper/: 2dkol.ipynb  2dkol_clean.ipynb  2dkol_grid_sensitivity.ipynb  2dtriangle.py  2dtriangle_clean.ipynb  2dtriangle_noisy.ipynb  clean_reconstruction.ipynb  extreme_events.py  noisy_reconstruction.ipynb  post.py  robustness_clean_data.ipynb  robustness_noisy_data.ipynb  special_issue.py
flowrec/: __init__.py  _typing.py  data.py  decomposition.py  losses.py  lr_schedule.py  physics_and_derivatives.py  postprocessing.py  sensors.py  signal.py  training_and_states.py
models/: data.py
train_config/: README.md  __init__.py  config.py  config_experiments.py  config_wandb.py  option_codes.py  sweep_process_config.py  train_options.py
util_scripts/: generate_kolsol_data.py  kolsol_data_convergence.py  perform_pod.py  plot_sweep_results.py  run_reduce_2dkol_sensors.py  select_sensor_qrpivot.py  volvo_data_to_grid.py
utils/: __init__.py  data.py  decomposition.py  loggers.py  ppt.mplstyle  py_helper.py  simulation2d.py  system.py  training_state.py
visualisation_notebook/: data_triangle2d.ipynb  data_volvorig.ipynb  results_physics.ipynb  results_triangle2d.ipynb  (+2 more)
(+37 files in other folders)
